[package]
name = "enigma-relay"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
description = "Production-ready offline store-and-forward relay for Enigma with quotas, TTL/GC, rate limits, idempotent ack, and optional TLS."
repository = "https://github.com/Gladius33/enigma-relay"
homepage = "https://github.com/Gladius33/enigma-relay"
documentation = "https://docs.rs/enigma-relay"
readme = "README.md"
keywords = ["relay", "offline", "store-and-forward", "e2ee", "enigma"]
categories = ["network-programming"]
rust-version = "1.75"
include = ["src/**", "docs/**", "README.md", "LICENSE", "Cargo.toml", ".gitignore"]

[features]
default = ["http", "persistence"]
http = ["dep:actix-web"]
tls = ["http", "dep:rustls", "dep:rustls-pemfile", "actix-web/rustls-0_23"]
mtls = ["tls"]
persistence = ["dep:sled"]
metrics = []

[dependencies]
actix-web = { version = "4.5", features = ["macros"], optional = true }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"

rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "logging"] }
rustls-pemfile = { version = "2", optional = true }
sled = { version = "0.34", optional = true }

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
rcgen = "0.13"
tempfile = "3"
